--- a/src/main/resources/mails/templates/request-rib.html
+++ b/src/main/resources/mails/templates/request-rib.html
@@ -190,7 +190,7 @@
                                                         <tr>
                                                             <td
                                                                 style="padding-left:10px;padding-right:10px;width:100%;">
-                                                                <p>Bonjour <span th:text="${customerName}"></span>,</p>
+                                                                <p>Bonjour,</p>
                                                                 <p>Dans le cadre de votre commande, nous avons facturé,
                                                                     déduit l’acompte reçu et il y a un trop-perçu. Afin
                                                                     de le rembourser, nous vous remercions de nous
