--- a/src/main/resources/mails/templates/send-announcement-confrere.html
+++ b/src/main/resources/mails/templates/send-announcement-confrere.html
@@ -166,10 +166,10 @@
                                                                 <ul>
                                                                     <li>
                                                                         Société : <span
-                                                                            th:text="${provision.assoAffaireOrder.affaire.denomination}"></span><span
-                                                                            th:text="${provision.assoAffaireOrder.affaire.firstname}"></span>
+                                                                            th:text="${provision.service.assoAffaireOrder.affaire.denomination}"></span><span
+                                                                            th:text="${provision.service.assoAffaireOrder.affaire.firstname}"></span>
                                                                         <span
-                                                                            th:text="${provision.assoAffaireOrder.affaire.lastname}"></span>
+                                                                            th:text="${provision.service.assoAffaireOrder.affaire.lastname}"></span>
                                                                     </li>
                                                                     <li>Département : <span
                                                                             th:text="${provision.announcement.department.code}"></span>
