--- a/client/src/app/modules/quotation/components/provision/provision.component.html
+++ b/client/src/app/modules/quotation/components/provision/provision.component.html
@@ -75,7 +75,7 @@
         (afterExpand)="onExpandedChange(provision.id)" [expanded]=" provision.id==inputProvisionId">
         <mat-expansion-panel-header>
           <mat-panel-title>
-            {{computeProvisionLabel(service, provision, true)}}
+            {{computeServiceLabel(service, true)}} {{computeProvisionLabel( provision)}}
           </mat-panel-title>
           <mat-panel-description>
             <span class="status-text"
@@ -123,13 +123,15 @@
   *ngIf="canModifyStatus() && editMode==false && asso && onlyOneProvision()" [matMenuTriggerFor]="menu3">
   <mat-icon>done</mat-icon>
 </button>
-<button matTooltip="Changer de statut" mat-fab color="accent" class="second-fab-button"
+<button matTooltip="Changer de statut" mat-fab class="second-fab-button"
   *ngIf="canModifyStatus() && editMode==false && asso && !onlyOneProvision()" [matMenuTriggerFor]="menu2">
   <mat-icon>done</mat-icon>
   <mat-menu #menu2="matMenu" style="min-height: 0px;padding: 0;" xPosition="before">
     <ng-container *ngFor="let service of asso.services">
       <button mat-menu-item [matMenuTriggerFor]="menu3" (mouseover)="setCurrentProvisionWorkflow(provision)"
-        *ngFor="let provision of service.provisions">{{computeProvisionLabel(service,provision,false)}}</button>
+        *ngFor="let provision of service.provisions"><span
+          style="color:#c4ae8b">{{computeServiceLabel(service,false)}}</span>
+        {{computeProvisionLabel(provision)}}</button>
     </ng-container>
   </mat-menu>
 </button>
@@ -182,7 +184,9 @@
     <mat-divider></mat-divider>
     <ng-container *ngFor="let service of asso.services">
       <button mat-menu-item [matMenuTriggerFor]="menu4" (mouseover)="setCurrentProvisionWorkflow(provision)"
-        *ngFor="let provision of service.provisions">{{computeProvisionLabel(service,provision,false)}}</button>
+        *ngFor="let provision of service.provisions"><span
+          style="color:#c4ae8b">{{computeServiceLabel(service,false)}}</span>
+        {{computeProvisionLabel(provision)}}</button>
     </ng-container>
   </mat-menu>
 </button>
