--- a/client/src/app/modules/administration/components/referentials/referential-provision-type/referential-provision-type.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-provision-type/referential-provision-type.component.html
@@ -63,7 +63,7 @@
             </td>
             <td>
               <generic-input [(model)]="selectedEntity.assignationWeight" label="Poids de l'assignation"
-                hint="Lorsqu'un poids est défini sur au moins une prestation d'une affaire, alors l'ensemble des prestations de l'affaire et l'affaire est assigné au responsable de la prestation la plus lourde"
+                matTooltip="Lorsqu'un poids est défini sur au moins une prestation d'une affaire, alors l'ensemble des prestations de l'affaire et l'affaire est assigné au responsable de la prestation la plus lourde"
                 [form]="entityForm" propertyName="assignationWeight" [isMandatory]="false" [isDisabled]="!editMode"
                 type="number"></generic-input>
             </td>
@@ -81,6 +81,19 @@
               <generic-toggle [(model)]="selectedEntity.isDisplayAnnualAccountScreen"
                 label="Afficher l'écran de dépôt de comptes ?" [form]="entityForm"
                 propertyName="isDisplayAnnualAccountScreen"></generic-toggle>
+            </td>
+          </tr>
+        </table>
+        <table class="full-width">
+          <tr>
+            <td>
+              <generic-toggle [(model)]="selectedEntity.isRecurring" label="Est recurrente par défaut ?"
+                [form]="entityForm" propertyName="isRecurring"></generic-toggle>
+            </td>
+            <td>
+              <select-customer-order-frequency [(model)]="selectedEntity.recurringFrequency"
+                label="Fréquence de récurrence" [form]="entityForm" propertyName="recurringFrequency"
+                [isMandatory]="true" [isDisabled]="!editMode"></select-customer-order-frequency>
             </td>
           </tr>
         </table>
