--- a/src/main/resources/mails/templates/invoice-reminder.html
+++ b/src/main/resources/mails/templates/invoice-reminder.html
@@ -163,8 +163,39 @@
                                                                         style="font-size: 22px;font-weight: 700; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 16.8px; color: rgb(196, 174, 139); line-height: 1.2;text-align: center;">
                                                                         <span>Facture n°<span
                                                                                 th:text="${invoice.id}"></span>
-                                                                            - Affaire <span th:text="${affaireLabel}">
+                                                                            - <span th:text="${affaireLabel}">
                                                                             </span></span>
+                                                                    </div>
+                                                                </div>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                    <table class="text_block block-3" width="100%" border="0"
+                                                        cellpadding="0" cellspacing="0" role="presentation"
+                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
+                                                        <tr>
+                                                            <td
+                                                                style="padding-left:10px;padding-right:10px;padding-top:15px;">
+                                                                <div style="font-family: Arial, sans-serif">
+                                                                    <div
+                                                                        style="font-size: 14px;font-weight: 700; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 16.8px; color: rgb(196, 174, 139); line-height: 1.2;text-align: center;">
+                                                                        <span th:text="${affaireLabelDetails}"> </span>
+                                                                    </div>
+                                                                </div>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                    <table class="text_block block-3" width="100%" border="0"
+                                                        cellpadding="0" cellspacing="0" role="presentation"
+                                                        th-if="${referenceLabel!=null}"
+                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
+                                                        <tr>
+                                                            <td
+                                                                style="padding-left:10px;padding-right:10px;padding-top:15px;">
+                                                                <div style="font-family: Arial, sans-serif">
+                                                                    <div
+                                                                        style="font-size: 14px;font-weight: 700; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 16.8px; color: rgb(196, 174, 139); line-height: 1.2;text-align: center;">
+                                                                        <span th:text="${referenceLabel}"> </span>
                                                                     </div>
                                                                 </div>
                                                             </td>
