--- a/client/src/app/modules/administration/components/referentials/referential-customer-order-frequency/referential-customer-order-frequency.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-customer-order-frequency/referential-customer-order-frequency.component.html
@@ -36,8 +36,8 @@
           </tr>
           <tr>
             <td>
-              <generic-input [(model)]="selectedEntity.monthNumber" label="Nombre de jours" [form]="entityForm"
-                propertyName="daysNumber" [isMandatory]="true" type="number" [isDisabled]="!editMode"></generic-input>
+              <generic-input [(model)]="selectedEntity.monthNumber" label="Nombre de mois" [form]="entityForm"
+                propertyName="monthNumber" [isMandatory]="true" type="number" [isDisabled]="!editMode"></generic-input>
             </td>
           </tr>
         </table>
