--- a/src/main/resources/mails/templates/customer-order-finalization.html
+++ b/src/main/resources/mails/templates/customer-order-finalization.html
@@ -225,7 +225,8 @@
                                                                 <p>Bonjour <span th:text="${customerName}"></span>,</p>
                                                                 <p>Nous avons le plaisir de vous informer de la
                                                                     finalisation de votre commande.<br />
-                                                                    La facture n°<span th:text="${invoice.id}"></span>
+                                                                    La facture n°<strong><span
+                                                                            th:text="${invoice.id}"></span></strong>
                                                                     est en PJ.</p>
                                                                 <p>Vous disposez de plusieurs moyens de règlement pour
                                                                     cette commande :</p>
