--- a/src/main/resources/mails/templates/send-competent-authority-reminder.html
+++ b/src/main/resources/mails/templates/send-competent-authority-reminder.html
@@ -146,100 +146,44 @@
                                                                 style="padding-left:10px;padding-right:10px;text-align:center;width:100%;">
                                                                 <h1
                                                                     style="margin: 0; white-space: nowrap;color: rgb(35, 61, 86); direction: ltr; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 20px; font-weight: 700; letter-spacing: normal; line-height: 24px; text-align: center; margin-top: 0; margin-bottom: 0;">
-                                                                    <strong><span>Votre avoir</span></strong>
+                                                                    <strong><span>Dossier en attente de validation
+                                                                        </span></strong>
                                                                 </h1>
                                                             </td>
                                                         </tr>
                                                     </table>
-                                                    <table class="text_block block-3" width="100%" border="0"
-                                                        cellpadding="0" cellspacing="0" role="presentation"
-                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
-                                                        <tr>
-                                                            <td
-                                                                style="padding-left:10px;padding-right:10px;padding-top:15px;">
-                                                                <div style="font-family: Arial, sans-serif">
-                                                                    <div
-                                                                        style="font-size: 22px;font-weight: 700; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 16.8px; color: rgb(196, 174, 139); line-height: 1.2;text-align: center;">
-                                                                        <span>Commande n°<span
-                                                                                th:text="${customerOrder.id}"></span>
-                                                                            - <span th:text="${affaireLabel}">
-                                                                            </span></span>
-                                                                    </div>
-                                                                </div>
-                                                            </td>
-                                                        </tr>
-                                                    </table>
-                                                    <table class="text_block block-3" width="100%" border="0"
-                                                        cellpadding="0" cellspacing="0" role="presentation"
-                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
-                                                        <tr>
-                                                            <td
-                                                                style="padding-left:10px;padding-right:10px;padding-top:15px;">
-                                                                <div style="font-family: Arial, sans-serif">
-                                                                    <div
-                                                                        style="font-size: 14px;font-weight: 700; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 16.8px; color: rgb(196, 174, 139); line-height: 1.2;text-align: center;">
-                                                                        <span th:text="${affaireLabelDetails}"> </span>
-                                                                    </div>
-                                                                </div>
-                                                            </td>
-                                                        </tr>
-                                                    </table>
-                                                    <table class="text_block block-3" width="100%" border="0"
-                                                        cellpadding="0" cellspacing="0" role="presentation"
-                                                        th-if="${referenceLabel!=null}"
-                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
-                                                        <tr>
-                                                            <td
-                                                                style="padding-left:10px;padding-right:10px;padding-top:15px;">
-                                                                <div style="font-family: Arial, sans-serif">
-                                                                    <div
-                                                                        style="font-size: 14px;font-weight: 700; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 16.8px; color: rgb(196, 174, 139); line-height: 1.2;text-align: center;">
-                                                                        <span th:text="${referenceLabel}"> </span>
-                                                                    </div>
-                                                                </div>
-                                                            </td>
-                                                        </tr>
-                                                    </table>
-                                                    <table class="image_block block-5" width="100%" border="0"
-                                                        cellpadding="0" cellspacing="0" role="presentation"
-                                                        th:if="${headerPicture!=null}"
-                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-                                                        <tr>
-                                                            <td
-                                                                style="width:100%;padding-right:0px;padding-left:0px;padding-top:20px;">
-                                                                <div class="alignment" align="center"
-                                                                    style="line-height:10px"><img class="big"
-                                                                        src="sample.png" th:src="|cid:${headerPicture}|"
-                                                                        style="display: block; height: auto; border: 0; width: 750px;"
-                                                                        width="750" alt="" title="" /></div>
-                                                            </td>
-                                                        </tr>
-                                                    </table>
                                                     <table width="100%" border="0" cellpadding="0" cellspacing="0"
                                                         role="presentation"
-                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;padding-top: 10px;">
+                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;padding-top: 30px;">
                                                         <tr>
                                                             <td
                                                                 style="padding-left:10px;padding-right:10px;width:100%;">
-                                                                <p>Bonjour <span th:text="${customerName}"></span>,</p>
-                                                                <p>Votre avoir <strong>n°<span
-                                                                            th:text="${creditNote.id}"></span></strong>
-                                                                    pour la
-                                                                    commande n°<span
-                                                                        th:text="${customerOrder.id}"></span>
-                                                                    est en PJ.</p>
+                                                                <p>Bonjour Madame, Monsieur,</p>
+                                                                <p>Nous vous avons adressé le(s) dossier(s) ci-dessous
+                                                                    référencé(s), pour effectuer des formalités :
+                                                                <p>
+                                                                <ul>
+                                                                    <li th:each="details : ${provisionDetails}"> <span
+                                                                            th:text="${details}"></span></li>
+                                                                </ul>
+                                                                <p>Nous souhaiterions obtenir, dans les meilleurs
+                                                                    délais, le KBis et/ou le certificat de dépôt
+                                                                    correspondant.
+                                                                </p>
+                                                                <p>Nous vous remercions pour la diligence que vous
+                                                                    apporterez dans le traitement de cette demande.</p>
                                                             </td>
                                                         </tr>
                                                     </table>
                                                     <table width="100%" border="0" cellpadding="0" cellspacing="0"
                                                         role="presentation"
-                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;padding-top: 10px;">
+                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;padding-top: 20px;">
                                                         <tr>
                                                             <td
                                                                 style="padding-left:10px;padding-right:10px;width:100%;">
                                                                 <p>Nous restons à votre disposition pour toute
-                                                                    information complémentaire et vous remercions pour
-                                                                    votre confiance.</p>
+                                                                    information complémentaire.</p>
+                                                                <p>Dans l'attente,</p>
                                                             </td>
                                                         </tr>
                                                     </table>
@@ -252,7 +196,7 @@
                                                                 <div style="font-family: Arial, sans-serif">
                                                                     <div
                                                                         style="font-size: 22px;font-weight: 700; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 16.8px; color: rgb(196, 174, 139); line-height: 1.2;text-align: center;">
-                                                                        A très bientôt !
+                                                                        Cordialement,
                                                                     </div>
                                                                 </div>
                                                             </td>
@@ -264,12 +208,17 @@
                                                         <tr>
                                                             <td
                                                                 style="padding-left:10px;padding-right:10px;width:100%;">
-                                                                <p><span style="font-size: 18px;">Service
-                                                                        comptabilité</span><br />
+                                                                <p><span style="font-size: 18px;"><span
+                                                                            th:text="${replyToEmployee.firstname}"></span>
+                                                                        <span
+                                                                            th:text="${replyToEmployee.lastname}"></span></span><br />
+                                                                    <span
+                                                                        th:text="${replyToEmployee.title}"></span><br />
                                                                     01 47 03 10 10<br />
                                                                     <a href="" style="text-decoration:underline">
                                                                         <span
-                                                                            style="color:rgb(35, 61, 86);; text-decoration:none">compta@jss.fr</span>
+                                                                            style="color:rgb(35, 61, 86);; text-decoration:none"><span
+                                                                                th:text="${replyToEmployee.mail}"></span></span>
                                                                     </a>
                                                                 </p>
                                                             </td>
