--- a/client/src/app/modules/quotation/components/domiciliation/domiciliation.component.html
+++ b/client/src/app/modules/quotation/components/domiciliation/domiciliation.component.html
@@ -44,7 +44,7 @@
             </td>
             <td>
               <autocomplete-postal-code [(model)]="domiciliation.postalCode" [form]="domiciliationForm"
-                [byPassAutocompletValidator]="true" propertyName="postalCode" [isMandatory]="true" label="Code postal"
+                [byPassAutocompletValidator]="true" propertyName="postalCode" [isMandatory]="false" label="Code postal"
                 [isDisabled]="!editMode" [conditionnalRequired]="mustDecribeAdresse() && !isStatusOpen"
                 (onOptionSelected)="fillCity($event)">
               </autocomplete-postal-code>
@@ -135,7 +135,7 @@
             </td>
             <td>
               <autocomplete-postal-code [(model)]="domiciliation.activityPostalCode" [form]="domiciliationForm"
-                [byPassAutocompletValidator]="true" propertyName="activityPostalCode" [isMandatory]="true"
+                [byPassAutocompletValidator]="true" propertyName="activityPostalCode" [isMandatory]="false"
                 label="Code postal" [isDisabled]="!editMode"
                 [conditionnalRequired]="instanceOfCustomerOrder && !isStatusOpen"
                 (onOptionSelected)="fillActivityCity($event)">
@@ -284,7 +284,7 @@
             </td>
             <td>
               <autocomplete-postal-code [(model)]="domiciliation.legalGardianPostalCode" [form]="domiciliationForm"
-                [byPassAutocompletValidator]="true" propertyName="legalGardianPostalCode" [isMandatory]="true"
+                [byPassAutocompletValidator]="true" propertyName="legalGardianPostalCode" [isMandatory]="false"
                 label="Code postal" [isDisabled]="!editMode"
                 [conditionnalRequired]="instanceOfCustomerOrder && !isStatusOpen"
                 (onOptionSelected)="fillLegalGardianCity($event)">
