--- a/client/src/app/modules/quotation/components/domiciliation/domiciliation.component.html
+++ b/client/src/app/modules/quotation/components/domiciliation/domiciliation.component.html
@@ -305,6 +305,7 @@
       </provision-options>
     </mat-tab>
     <mat-tab label="Documents" *ngIf="domiciliation.id && provision">
+      <paper-set *ngIf="quotation &&  instanceOfCustomerOrderFn(quotation)" [customerOrder]="quotation"></paper-set>
       <attachments [entity]="provision" [editMode]="editMode" [entityType]="PROVISION_ENTITY_TYPE.entityType">
       </attachments>
     </mat-tab>
