--- a/client/src/app/modules/quotation/components/formalite/formalite.component.html
+++ b/client/src/app/modules/quotation/components/formalite/formalite.component.html
@@ -25,23 +25,22 @@
                   [isDisabled]="!editMode" propertyName="isAuthorizedToSign"></generic-toggle>
               </ng-container>
             </td>
-            <td
+          </tr>
+          <tr>
+            <td colspan="2"
               *ngIf="formalite.waitedCompetentAuthority && formalite.formaliteStatus && formalite.formaliteStatus.code ==FORMALITE_STATUS_WAITING_DOCUMENT_AUTHORITY">
               <autocomplete-competent-authority [(model)]="formalite.waitedCompetentAuthority" [form]="formaliteForm"
                 propertyName="waitedCompetentAuthority" [isMandatory]="false" label="Autorité compétente en attente"
                 [isDisabled]="true"></autocomplete-competent-authority>
             </td>
+            <td><generic-datepicker *ngIf="provision.lastCompetentAuthorityReminderDateTime"
+                [(model)]="provision.lastCompetentAuthorityReminderDateTime" label="Dernière relance de l'AC"
+                [form]="formaliteForm" propertyName="lastCompetentAuthorityReminderDateTime"
+                [isDisabled]="true"></generic-datepicker></td>
           </tr>
         </table>
-        <table class="full-width">
-          <tr>
-            <td>
-              <generic-textarea [(model)]="formalite.observations" label="Observations" [form]="formaliteForm"
-                propertyName="observations" [isMandatory]="false" [isDisabled]="!editMode"
-                [numberOfLines]="10"></generic-textarea>
-            </td>
-          </tr>
-        </table>
+        <mat-divider class="margin-mat-divider"></mat-divider>
+        <customer-order-comment *ngIf="provision " [provision]="provision"></customer-order-comment>
       </div>
     </mat-tab>
     <mat-tab label="Dépôt d'actes"
@@ -53,6 +52,7 @@
       </provision-options>
     </mat-tab>
     <mat-tab label="Documents" *ngIf="formalite.id && provision ">
+      <paper-set *ngIf="quotation &&  instanceOfCustomerOrderFn(quotation)" [customerOrder]="quotation"></paper-set>
       <attachments [entity]="provision" [editMode]="editMode" [entityType]="PROVISION_ENTITY_TYPE.entityType">
       </attachments>
     </mat-tab>
