--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -52,6 +52,11 @@ html, body {
   flex: 1;
 }
 
+.fab-extended-button-containter {
+  text-align: center;
+  padding-bottom: 15px;
+}
+
 .radio-group {
   display: flex;
   flex-direction: column;
@@ -185,4 +190,9 @@ tr.table-row:hover {
 
 .min-widht-table {
   min-width: auto !important;
+}
+
+.margin-mat-divider {
+  margin-top: 20px !important;
+  margin-bottom: 20px !important;
 }
